# git-hg-sync

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config-dev.toml  config-development.toml  config-docker.toml  config-prod.toml  config-production-firefox.toml  config-production-thunderbird.toml  config-production.toml  config-staging.toml  config.ini.example  config.toml.example  create_clones.sh  create_repo.md  docker-compose.yaml  dockerflow.py  entrypoint.sh  install_git-cinnabar.sh  pyproject.toml  repos.json  requirements.txt  test  tox.ini
.github/: dependabot.yml
.github/workflows/: build.yml  deploy.yml  docker-compose.yml  docker_compose.yml  lint.yml  sbom.yml  test.yml
docker/: entrypoint.sh  hgrc
git_hg_sync/: __init__.py  __main__.py  application.py  cli.py  config.ini  config.py  dequeue_tool.py  events.py  git_cinnabar.py  logging.py  mapping.py  pulse_consumer.py  pulse_sender.py  pulse_worker.py  repo_synchronizer.py  retry.py  service.py  sync.py  sync_repos.py
rabbitmq/: definitions.json
tests/: #test_pulse.py#  config_test.ini  conftest.py  pulse_utils.py  test_config.py  test_config_files.py  test_integration.py  test_pulse.py  test_pulse_worker.py  test_repo_synchronizer.py  test_retry.py  test_sync_repo.py  test_utils.py  utils.py
tests/data/: config.toml
